--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       { name: 'Ava Johnson', role: 'Software Engineer', dept: 'Engineering', email: 'ava@company.com', phone: '555-123-4567', img: 'https://randomuser.me/api/portraits/women/44.jpg' },
       { name: 'Liam Smith', role: 'UI/UX Designer', dept: 'Design', email: 'liam@company.com', phone: '555-234-5678', img: 'https://randomuser.me/api/portraits/men/34.jpg' },
       { name: 'Olivia Brown', role: 'Marketing Lead', dept: 'Marketing', email: 'olivia@company.com', phone: '555-345-6789', img: 'https://randomuser.me/api/portraits/women/40.jpg' },
-      { name: 'Ethan Lee', role: 'Frontend Developer', dept: 'Engineering', email: 'ethan@company.com', phone: '555-456-7890', img: 'https://randomuser.me/api/portraits/men/22.jpg' },
+      { name: 'Khup Muang', role: 'Frontend Developer', dept: 'Engineering', email: 'ethan@company.com', phone: '555-456-7890', img: 'img/me.JPG' },
       { name: 'Sophia Davis', role: 'HR Manager', dept: 'HR', email: 'sophia@company.com', phone: '555-567-8901', img: 'https://randomuser.me/api/portraits/women/31.jpg' },
       { name: 'Noah Wilson', role: 'Product Designer', dept: 'Design', email: 'noah@company.com', phone: '555-678-9012', img: 'https://randomuser.me/api/portraits/men/62.jpg' },
       { name: 'Isabella Martinez', role: 'Marketing Specialist', dept: 'Marketing', email: 'isabella@company.com', phone: '555-789-0123', img: 'https://randomuser.me/api/portraits/women/46.jpg' },
